--- a/style.css
+++ b/style.css
@@ -285,13 +285,14 @@ table {
 header#masthead {
   margin-bottom: 0;
   background-color: #563d7c ;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15), inset 0 -1px 0 rgba(0,0,0,.20);
   padding: .74rem 1rem;
 }
 
+/* navbar logo size */
 .navbar-brand > a {
   color: rgba(0, 0, 0, 0.9);
-  font-size: 1.1rem;
+  font-size: 1.825rem;
   outline: medium none;
   text-decoration: none;
   color: #fff;
